# urfu_lr_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: demo.yml
lr1/: power.cpp  ptr.cpp  swp.cpp
lr10/: bus_park.cpp  test_script.txt
lr2/: matrix.cpp
lr3/: sort.cpp  sort2.cpp
lr4/: strings.cpp  strings.h  strings_1static.cpp  strings_2malloc.cpp  strings_3calloc.cpp  strings_4array.cpp
lr5/: file1.cpp  file2.cpp  file3.cpp  test.txt
lr6/: Str.cpp  Str.h  main.cpp
lr8/: encrypt.cpp  strings.cpp  template1.cpp  template2.cpp  template3.cpp
lr9/: train_sort.cpp
